[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cpa-context-bridge"
version = "0.1.0"
description = "Reverse proxy that enriches CLIProxyAPI /v1/models with context metadata."
requires-python = ">=3.11"
dependencies = [
  "aiohttp==3.10.11",
]

[tool.setuptools.packages.find]
include = ["cpa_context_bridge*"]

[tool.setuptools.package-data]
cpa_context_bridge = ["data/*.json"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
